--- a/v3/farm/assets-list.html
+++ b/v3/farm/assets-list.html
@@ -81,21 +81,22 @@
                     </div>
                 </div>
             </div>
-            <div class="col-12 col-lg-10 ms-lg-auto p-3 p-lg-5">               
+            <div class="col-12 col-lg-10 ms-lg-auto px-3 py-5 p-lg-5">               
                 <div class="row">
                     <div class="col-12 col-lg-9">
-                        <div class="d-flex flex-wrap align-items-center p-4 bg-body border rounded shadow mb-5">
-                            <h2 class="mb-3 mb-sm-0">Farm</h2> 
-                            <div class="fs-5 text-body-tertiary ms-0 ms-sm-auto pe-2">Deposit your assets and earn fees</div>
+                        <div class="row g-0 align-items-center p-4 mb-5 bg-body border rounded shadow mb-5">
+                            <div class="col-12 col-sm-4"><h2 class="mb-3 mb-sm-0">Farm</h2></div>
+                            <div class="col-12 col-sm-8 text-start text-sm-end text-body-tertiary fs-5">Deposit your assets and earn fees</div>
                         </div>
-                        <div class="row text-body-secondary px-3 mb-3">
+
+                        <div class="row g-0 text-body-secondary px-3 mb-3">
                             <div class="col text-start">Asset</div>
                             <div class="col text-center d-none d-md-block">Total deposits</div>
                             <div class="col text-center">Your balance</div>                            
                             <div class="col text-center">APR</div>
                             <div class="col text-center">Action</div>
                         </div>
-                        <div class="row align-items-center p-3 mx-1 mb-4 bg-body border rounded shadow">
+                        <div class="row g-0 align-items-center p-3 mb-4 bg-body border rounded shadow">
                             <div class="col p-0">
                                 <div class="d-flex justify-content-start">
                                     <img src="../../image/assets/USDC.svg" class="d-none d-sm-block me-2" alt="USDC" width="42">
@@ -123,7 +124,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="row align-items-center mx-1 p-3 bg-body border rounded shadow">
+                        <div class="row g-0 align-items-center p-3 bg-body border rounded shadow">
                             <div class="col p-0">
                                 <div class="d-flex justify-content-start">
                                     <img src="../../image/assets/ETH.svg" class="d-none d-sm-block me-2" alt="ETH" width="42">
