--- a/v3/borrow/borrow.html
+++ b/v3/borrow/borrow.html
@@ -81,7 +81,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-12 col-lg-10 ms-lg-auto p-3 p-lg-5">
+            <div class="col-12 col-lg-10 ms-lg-auto px-3 py-5 p-lg-5">
                 <div class="row g-5">
                     <div class="col-12 col-lg-7 col-xxl-6">
                         <div class="bg-body p-3 rounded border shadow">
