--- a/v3/borrow/collateral.html
+++ b/v3/borrow/collateral.html
@@ -81,7 +81,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-12 col-lg-10 ms-lg-auto p-3 p-lg-5">
+            <div class="col-12 col-lg-10 ms-lg-auto px-3 py-5 p-lg-5">
                 <div class="row">
                     <div class="col-12 col-lg-9 col-xxl-8">
 
@@ -91,7 +91,7 @@
                                     <div>ETH <span class="text-body-secondary">Market</span> : <span class="text-body-tertiary">$3.40K</span></div>
                                 </div>
                                 <div class="col-12 col-sm-7">
-                                    <div class="d-flex justify-content-start justify-content-sm-end py-4 py-sm-0">
+                                    <div class="d-flex justify-content-start justify-content-sm-end py-5 py-sm-0">
                                         <div class="text-body d-flex align-items-center py-2 me-3 border-bottom border-5 border-primary" style="padding-bottom: 0.75rem !important; cursor: pointer;"><img src="../../image/assets/ETH.svg" alt="ETH" class="me-2" style="width: 1.6rem;"> ETH <span class="text-body-tertiary ps-1">Market</span></div>
                                         <div class="text-body d-flex align-items-center py-2 ms-3 border-bottom border-5" style="padding-bottom: 0.75rem !important; border-bottom-color: transparent !important; cursor: pointer;" aria-current="page"><img src="../../image/assets/USDC.svg" alt="ETH" class="me-2" style="width: 1.6rem;"> USDC <span class="text-body-tertiary ps-1">Market</span></div>                                    
                                     </div>
@@ -122,7 +122,7 @@
                                         <button type="button" class="btn btn-primary text-white">Withdraw</button>
                                     </div>
                                 </div>
-                                <div class="w-100" style="margin: 1rem 0;"></div>
+                                <div class="w-100 my-4 my-sm-2"></div>
                                 <div class="col-12">
                                     <div class="d-flex text-body-secondary text-center small">
                                         <div class="flex-fill border-end p-2">Loan to value : <span class="opacity-75">80%</span></div>
@@ -152,7 +152,7 @@
                                         <button type="button" class="btn btn-primary text-white">Withdraw</button>
                                     </div>
                                 </div>
-                                <div class="w-100" style="margin: 1rem 0;"></div>
+                                <div class="w-100 my-4 my-sm-2"></div>
                                 <div class="col-12">
                                     <div class="d-flex text-body-secondary text-center small">
                                         <div class="flex-fill border-end p-2">Loan to value : <span class="opacity-75">70%</span></div>
