--- a/v3/borrow/select-asset.html
+++ b/v3/borrow/select-asset.html
@@ -81,7 +81,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-12 col-lg-10 ms-lg-auto p-3 p-lg-5">
+            <div class="col-12 col-lg-10 ms-lg-auto px-3 py-5 p-lg-5">
                 <div class="row">
                     <div class="col-12 col-lg-5">
                         <div class="bg-body bg-opacity-75 p-4 border rounded shadow">
@@ -93,7 +93,7 @@
                             <div class="mb-2">
 
                                 <div class="bg-body shadow rounded p-3 mb-4 item-hover">
-                                    <div class="d-flex justify-content-between align-items-center mb-4">
+                                    <div class="d-flex justify-content-between align-items-center mb-5">
                                         <div class="d-flex justify-content-start">
                                             <img src="../../image/assets/USDC.svg" alt="USDC" width="40">
                                             <div class="ps-2">
@@ -120,7 +120,7 @@
                                 </div>
 
                                 <div class="bg-body shadow rounded p-3 item-hover">
-                                    <div class="d-flex justify-content-between align-items-center mb-4">
+                                    <div class="d-flex justify-content-between align-items-center mb-5">
                                         <div class="d-flex justify-content-start">
                                             <img src="../../image/assets/ETH.svg" alt="USDC" width="40">
                                             <div class="ps-2">
