--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <ul>
           <li>Farm
             <ul>
-              <li><a href="v3/farm/assets-list.html">Farm</a></li>
+              <li><a href="v3/farm/farm.html">Farm</a></li>
               <li><a href="v3/farm/supply.html">Supply</a></li>
               <li><a href="v3/farm/withdraw.html">Withdraw #1</a></li>
               <li><a href="v3/farm/withdraw.2.html">Withdraw #2</a></li>              
@@ -41,7 +41,7 @@
         <ul>
           <li>Claim
             <ul>
-              <li><a href="v3/claim/claim.3.html">Claim</a></li>
+              <li><a href="v3/claim/claim.html">Claim</a></li>
             </ul>
           </li>
         </ul>
