Collateral : close button

--- a/v3/borrow/collateral.html
+++ b/v3/borrow/collateral.html
@@ -96,7 +96,7 @@
                                         <div class="text-body d-flex align-items-center py-2 ms-3 border-bottom border-5" style="padding-bottom: 0.75rem !important; border-bottom-color: transparent !important; cursor: pointer;" aria-current="page"><img src="../../image/assets/USDC.svg" alt="ETH" class="me-2" style="width: 1.6rem;"> USDC <span class="text-body-tertiary ps-1">Market</span></div>                                    
                                     </div>
                                 </div>
-                                <div class="col-12 col-sm-1 text-end">
+                                <div class="col-12 col-sm-1 text-start text-sm-end">
                                     <button type="button" class="btn-close" aria-label="Close"></button>
                                 </div>
                             </div>
