Collateral : close button

--- a/v3/borrow/collateral.html
+++ b/v3/borrow/collateral.html
@@ -86,17 +86,17 @@
                     <div class="col-12 col-lg-9 col-xxl-8">
 
                             <div class="row g-0 align-items-center bg-body shadow border rounded p-4 mb-5">
-                                <div class="col-12 col-sm-4">
+                                <div class="col-9 col-sm-4">
                                     <h2 class="mb-1">Collateral</h2>
                                     <div>ETH <span class="text-body-secondary">Market</span> : <span class="text-body-tertiary">$3.40K</span></div>
                                 </div>
-                                <div class="col-12 col-sm-7">
-                                    <div class="d-flex justify-content-start justify-content-sm-end py-5 py-sm-0">
+                                <div class="col-12 col-sm-7 order-3 order-sm-2">
+                                    <div class="d-flex justify-content-start justify-content-sm-end pt-5 pt-sm-0">
                                         <div class="text-body d-flex align-items-center py-2 me-3 border-bottom border-5 border-primary" style="padding-bottom: 0.75rem !important; cursor: pointer;"><img src="../../image/assets/ETH.svg" alt="ETH" class="me-2" style="width: 1.6rem;"> ETH <span class="text-body-tertiary ps-1">Market</span></div>
                                         <div class="text-body d-flex align-items-center py-2 ms-3 border-bottom border-5" style="padding-bottom: 0.75rem !important; border-bottom-color: transparent !important; cursor: pointer;" aria-current="page"><img src="../../image/assets/USDC.svg" alt="ETH" class="me-2" style="width: 1.6rem;"> USDC <span class="text-body-tertiary ps-1">Market</span></div>                                    
                                     </div>
                                 </div>
-                                <div class="col-12 col-sm-1 text-start text-sm-end">
+                                <div class="col-3 col-sm-1 order-2 order-sm-3 text-end">
                                     <button type="button" class="btn-close" aria-label="Close"></button>
                                 </div>
                             </div>
