Select borrow asset update

--- a/v3/borrow/select-asset.html
+++ b/v3/borrow/select-asset.html
@@ -86,7 +86,7 @@
                     <div class="col-12 col-lg-5">
                         <div class="bg-body bg-opacity-75 p-4 border rounded shadow">
                             <div class="d-flex align-items-center mb-5">
-                                <h2 class="me-auto">Borrow asset</h2>
+                                <h2 class="mb-0 me-auto">Borrow asset</h2>
                                 <button type="button" class="btn-close" aria-label="Close"></button>
                             </div>
 
