--- a/v3/borrow/collateral.html
+++ b/v3/borrow/collateral.html
@@ -111,10 +111,12 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="col-6 col-sm-4 text-center">
-                                    <div class="fw-medium">Your balance</div> 
-                                    <div class="text-body-secondary">2.657</div>
-                                    <div class="text-body-tertiary" style="font-size: 75%;">$3.40K</div>
+                                <div class="col-6 col-sm-4 d-flex justify-content-start justify-content-sm-center align-items-center align-items-sm-start">
+                                    <div class="px-2 text-center">
+                                        <div class="fw-medium">Your balance</div> 
+                                        <div class="text-body-secondary">2.657</div>
+                                        <div class="text-body-tertiary" style="font-size: 75%;">$3.40K</div>
+                                    </div>
                                 </div>
                                 <div class="col-6 col-sm-3">
                                     <div class="d-flex flex-column">
@@ -141,10 +143,12 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="col-6 col-sm-4 text-center">
-                                    <div class="fw-medium">Your balance</div> 
-                                    <div class="text-body-secondary">0</div>
-                                    <div class="text-body-tertiary" style="font-size: 75%;">$0</div>
+                                <div class="col-6 col-sm-4 d-flex justify-content-start justify-content-sm-center align-items-center align-items-sm-start">
+                                    <div class="px-2 text-center">
+                                        <div class="fw-medium">Your balance</div> 
+                                        <div class="text-body-secondary">0</div>
+                                        <div class="text-body-tertiary" style="font-size: 75%;">$0</div>
+                                    </div>
                                 </div>
                                 <div class="col-6 col-sm-3">
                                     <div class="d-flex flex-column">
