--- a/v3/borrow/collateral.html
+++ b/v3/borrow/collateral.html
@@ -111,7 +111,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="col-6 col-sm-4 d-flex justify-content-start justify-content-sm-center align-items-center align-items-sm-start">
+                                <div class="col-6 col-sm-4 d-flex justify-content-start justify-content-sm-center">
                                     <div class="px-2 text-center">
                                         <div class="fw-medium">Your balance</div> 
                                         <div class="text-body-secondary">2.657</div>
@@ -143,7 +143,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="col-6 col-sm-4 d-flex justify-content-start justify-content-sm-center align-items-center align-items-sm-start">
+                                <div class="col-6 col-sm-4 d-flex justify-content-start justify-content-sm-center">
                                     <div class="px-2 text-center">
                                         <div class="fw-medium">Your balance</div> 
                                         <div class="text-body-secondary">0</div>
