Add claim all rewards button

--- a/v3/borrow/collateral.html
+++ b/v3/borrow/collateral.html
@@ -59,7 +59,7 @@
         <div class="row">
             <div id="sidebar-container" class="col-lg-2 d-none d-lg-block bg-white border-end shadow">
                 <div id="sidebar-inner" class="d-flex flex-column p-3 pt-5">
-                    <button id="network-select" type="button" class="btn btn-light btn-lg border shadow-sm">
+                    <button id="network-select" type="button" class="btn btn-light btn-lg border shadow-sm rounded-5">
                         <div class="d-flex">
                             <img class="icon d-none d-xl-inline" src="../../image/Ethereum.svg" alt="network">
                             <div class="flex-grow-1">Ethereum</div>
@@ -85,13 +85,13 @@
                 <div class="row">
                     <div class="col-12 col-lg-9 col-xxl-8">
 
-                            <div class="row g-0 align-items-center bg-body shadow border rounded p-4 mb-5">
+                            <div class="row g-0 align-items-center bg-body shadow border rounded-4 p-4 mb-5">
                                 <div class="col-9 col-sm-4">
                                     <h2 class="mb-1">Collateral</h2>
                                     <div>ETH <span class="text-body-secondary">Market</span> : <span class="text-body-tertiary">$3.40K</span></div>
                                 </div>
                                 <div class="col-12 col-sm-7 order-3 order-sm-2">
-                                    <div class="d-flex justify-content-start justify-content-sm-end pt-5 pt-sm-0">
+                                    <div class="d-flex justify-content-around justify-content-sm-end pt-5 pt-sm-0">
                                         <div class="text-body d-flex align-items-center py-2 me-3 border-bottom border-5 border-primary" style="padding-bottom: 0.75rem !important; cursor: pointer;"><img src="../../image/assets/ETH.svg" alt="ETH" class="me-2" style="width: 1.6rem;"> ETH <span class="text-body-tertiary ps-1">Market</span></div>
                                         <div class="text-body d-flex align-items-center py-2 ms-3 border-bottom border-5" style="padding-bottom: 0.75rem !important; border-bottom-color: transparent !important; cursor: pointer;" aria-current="page"><img src="../../image/assets/USDC.svg" alt="ETH" class="me-2" style="width: 1.6rem;"> USDC <span class="text-body-tertiary ps-1">Market</span></div>                                    
                                     </div>
