--- a/v3/claim/claim.2.html
+++ b/v3/claim/claim.2.html
@@ -121,8 +121,8 @@
                                                     <div class="d-flex justify-content-center align-items-center mb-1"><img src="../../image/assets/COMP.svg" alt="COMP" class="me-2" style="width: 1.2rem;"> <div>5.32</div></div>
                                                     <div class="small text-body-secondary">$9.76K</div>
                                                 </td>
-                                                <td>
-                                                  <a href="#" class="link-primary color-primary-shaded text-decoration-none fw-semibold"><i class="bi bi-stars me-1"></i>  Claim</a>
+                                                <td class="text-end">
+                                                    <button type="button" class="btn btn-primary text-white">Claim</button>
                                                 </td>
                                               </tr>
                                               <tr>
@@ -133,13 +133,8 @@
                                                     <div class="d-flex justify-content-center align-items-center mb-1"><img src="../../image/assets/COMP.svg" alt="COMP" class="me-2" style="width: 1.2rem;"> <div>1,030.43</div></div>
                                                     <div class="small text-body-secondary">$1.29K</div>
                                                 </td>
-                                                <td>
-                                                  <a href="#" class="link-primary color-primary-shaded text-decoration-none fw-semibold"><i class="bi bi-stars me-1"></i>  Claim</a>
-                                                </td>
-                                              </tr>
-                                              <tr>
-                                                <td class="text-center p-3" colspan="3" style="cursor: pointer">
-                                                  <a href="#" class="link-primary color-primary-shaded text-decoration-none fw-semibold"><i class="bi bi-stars me-1"></i> Claim all</a>
+                                                <td class="text-end">
+                                                    <button type="button" class="btn btn-primary text-white">Claim</button>
                                                 </td>
                                               </tr>
                                             </tbody>
@@ -174,8 +169,8 @@
                                                     <div class="d-flex justify-content-center align-items-center mb-1"><img src="../../image/assets/COMP.svg" alt="COMP" class="me-2" style="width: 1.2rem;"> <div>0</div></div>
                                                     <div class="small text-body-secondary">$0</div>
                                                 </td>
-                                                <td>
-                                                  <a href="#" class="link-secondary text-decoration-none fw-semibold"><i class="bi bi-stars me-1"></i>  Claim</a>
+                                                <td class="text-end">
+                                                    <button type="button" class="btn btn-primary text-white" disabled>Claim</button>
                                                 </td>
                                               </tr>
                                               <tr>
@@ -186,8 +181,8 @@
                                                     <div class="d-flex justify-content-center align-items-center mb-1"><img src="../../image/assets/COMP.svg" alt="COMP" class="me-2" style="width: 1.2rem;"> <div>0</div></div>
                                                     <div class="small text-body-secondary">$0</div>
                                                 </td>
-                                                <td>
-                                                  <a href="#" class="link-secondary text-decoration-none fw-semibold"><i class="bi bi-stars me-1"></i>  Claim</a>
+                                                <td class="text-end">
+                                                    <button type="button" class="btn btn-primary text-white" disabled>Claim</button>
                                                 </td>
                                               </tr>
                                             </tbody>
@@ -223,8 +218,8 @@
                                                     <div class="d-flex justify-content-center align-items-center mb-1"><img src="../../image/assets/COMP.svg" alt="COMP" class="me-2" style="width: 1.2rem;"> <div>234.43</div></div>
                                                     <div class="small text-body-secondary">$234.29</div>
                                                 </td>
-                                                <td>
-                                                  <a href="#" class="link-primary color-primary-shaded text-decoration-none fw-semibold"><i class="bi bi-stars me-1"></i>  Claim</a>
+                                                <td class="text-end">
+                                                    <button type="button" class="btn btn-primary text-white">Claim</button>
                                                 </td>
                                               </tr>
                                             </tbody>
@@ -259,8 +254,8 @@
                                                       <div class="d-flex justify-content-center align-items-center mb-1"><img src="../../image/assets/COMP.svg" alt="COMP" class="me-2" style="width: 1.2rem;"> <div>0</div></div>
                                                       <div class="small text-body-secondary">$0</div>
                                                   </td>
-                                                  <td>
-                                                    <a href="#" class="link-secondary text-decoration-none fw-semibold"><i class="bi bi-stars me-1"></i>  Claim</a>
+                                                  <td class="text-end">
+                                                      <button type="button" class="btn btn-primary text-white" disabled>Claim</button>
                                                   </td>
                                                 </tr>
                                                 <tr>
@@ -271,8 +266,8 @@
                                                       <div class="d-flex justify-content-center align-items-center mb-1"><img src="../../image/assets/COMP.svg" alt="COMP" class="me-2" style="width: 1.2rem;"> <div>0</div></div>
                                                       <div class="small text-body-secondary">$0</div>
                                                   </td>
-                                                  <td>
-                                                    <a href="#" class="link-secondary text-decoration-none fw-semibold"><i class="bi bi-stars me-1"></i>  Claim</a>
+                                                  <td class="text-end">
+                                                      <button type="button" class="btn btn-primary text-white" disabled>Claim</button>
                                                   </td>
                                                 </tr>
                                               </tbody>
