Claim all responsivity

--- a/v3/claim/claim.html
+++ b/v3/claim/claim.html
@@ -70,7 +70,7 @@
                     <ul class="nav nav-pills flex-column mb-auto">
                         <li class="nav-item"><a aria-current="page" class="nav-link" href="#/"><i class="bi bi-box-arrow-down me-1"></i> Borrow</a></li>
                         <li class="nav-item"><a class="nav-link" href="#/farm"><i class="bi bi-flower2 me-1"></i> Farm</a></li>
-                        <li class="nav-item"><a class="nav-link active" href="#/claim"><i class="bi bi-stars me-1"></i> Claim</a></li>
+                        <li class="nav-item"><a class="nav-link active" href="#/claim"><i class="bi bi-stars me-1 d-none d-sm-inline"></i> Claim</a></li>
                     </ul>
                     <hr class="text-primary">
                     <div id="compound-links" class="d-flex justify-content-around fs-4">
@@ -122,7 +122,7 @@
                                                     <div class="small text-body-secondary">$9.76K</div>
                                                 </td>
                                                 <td>
-                                                  <a href="#" class="link-primary color-primary-shaded text-decoration-none fw-semibold"><i class="bi bi-stars me-1"></i>  Claim</a>
+                                                  <a href="#" class="link-primary color-primary-shaded text-decoration-none fw-semibold"><i class="bi bi-stars me-1 d-none d-sm-inline"></i>  Claim</a>
                                                 </td>
                                               </tr>
                                               <tr>
@@ -134,12 +134,12 @@
                                                     <div class="small text-body-secondary">$1.29K</div>
                                                 </td>
                                                 <td>
-                                                  <a href="#" class="link-primary color-primary-shaded text-decoration-none fw-semibold"><i class="bi bi-stars me-1"></i>  Claim</a>
+                                                  <a href="#" class="link-primary color-primary-shaded text-decoration-none fw-semibold"><i class="bi bi-stars me-1 d-none d-sm-inline"></i>  Claim</a>
                                                 </td>
                                               </tr>
                                               <tr>
                                                 <td class="text-center p-3" colspan="3" style="cursor: pointer">
-                                                  <a href="#" class="link-primary color-primary-shaded text-decoration-none fw-semibold"><i class="bi bi-stars me-1"></i> Claim all</a>
+                                                  <a href="#" class="link-primary color-primary-shaded text-decoration-none fw-semibold"><i class="bi bi-stars me-1 d-none d-sm-inline"></i> Claim all</a>
                                                 </td>
                                               </tr>
                                             </tbody>
@@ -175,7 +175,7 @@
                                                     <div class="small text-body-secondary">$0</div>
                                                 </td>
                                                 <td>
-                                                  <a href="#" class="link-secondary text-decoration-none fw-semibold"><i class="bi bi-stars me-1"></i>  Claim</a>
+                                                  <a href="#" class="link-secondary text-decoration-none fw-semibold"><i class="bi bi-stars me-1 d-none d-sm-inline"></i>  Claim</a>
                                                 </td>
                                               </tr>
                                               <tr>
@@ -187,7 +187,7 @@
                                                     <div class="small text-body-secondary">$0</div>
                                                 </td>
                                                 <td>
-                                                  <a href="#" class="link-secondary text-decoration-none fw-semibold"><i class="bi bi-stars me-1"></i>  Claim</a>
+                                                  <a href="#" class="link-secondary text-decoration-none fw-semibold"><i class="bi bi-stars me-1 d-none d-sm-inline"></i>  Claim</a>
                                                 </td>
                                               </tr>
                                             </tbody>
@@ -224,7 +224,7 @@
                                                     <div class="small text-body-secondary">$234.29</div>
                                                 </td>
                                                 <td>
-                                                  <a href="#" class="link-primary color-primary-shaded text-decoration-none fw-semibold"><i class="bi bi-stars me-1"></i>  Claim</a>
+                                                  <a href="#" class="link-primary color-primary-shaded text-decoration-none fw-semibold"><i class="bi bi-stars me-1 d-none d-sm-inline"></i>  Claim</a>
                                                 </td>
                                               </tr>
                                             </tbody>
@@ -260,7 +260,7 @@
                                                       <div class="small text-body-secondary">$0</div>
                                                   </td>
                                                   <td>
-                                                    <a href="#" class="link-secondary text-decoration-none fw-semibold"><i class="bi bi-stars me-1"></i>  Claim</a>
+                                                    <a href="#" class="link-secondary text-decoration-none fw-semibold"><i class="bi bi-stars me-1 d-none d-sm-inline"></i>  Claim</a>
                                                   </td>
                                                 </tr>
                                                 <tr>
@@ -272,7 +272,7 @@
                                                       <div class="small text-body-secondary">$0</div>
                                                   </td>
                                                   <td>
-                                                    <a href="#" class="link-secondary text-decoration-none fw-semibold"><i class="bi bi-stars me-1"></i>  Claim</a>
+                                                    <a href="#" class="link-secondary text-decoration-none fw-semibold"><i class="bi bi-stars me-1 d-none d-sm-inline"></i>  Claim</a>
                                                   </td>
                                                 </tr>
                                               </tbody>
