--- a/v3/claim/claim.html
+++ b/v3/claim/claim.html
@@ -121,9 +121,9 @@
                                                     <div class="d-flex justify-content-center align-items-center mb-1"><img src="../../image/assets/COMP.svg" alt="COMP" class="me-2" style="width: 1.2rem;"> <div>5.32</div></div>
                                                     <div class="small text-body-secondary">$9.76K</div>
                                                 </td>
-                                                <td>
-                                                  <a href="#" class="link-primary color-primary-shaded text-decoration-none fw-semibold"><i class="bi bi-stars me-1 d-none d-sm-inline"></i>  Claim</a>
-                                                </td>
+                                                <td class="text-end">
+                                                  <button type="button" class="btn btn-primary text-white">Claim</button>
+                                              </td>
                                               </tr>
                                               <tr>
                                                 <td>
@@ -133,13 +133,13 @@
                                                     <div class="d-flex justify-content-center align-items-center mb-1"><img src="../../image/assets/COMP.svg" alt="COMP" class="me-2" style="width: 1.2rem;"> <div>1,030.43</div></div>
                                                     <div class="small text-body-secondary">$1.29K</div>
                                                 </td>
-                                                <td>
-                                                  <a href="#" class="link-primary color-primary-shaded text-decoration-none fw-semibold"><i class="bi bi-stars me-1 d-none d-sm-inline"></i>  Claim</a>
+                                                <td class="text-end">
+                                                  <button type="button" class="btn btn-primary text-white">Claim</button>
                                                 </td>
                                               </tr>
                                               <tr>
-                                                <td class="text-center p-3" colspan="3" style="cursor: pointer">
-                                                  <a href="#" class="link-primary color-primary-shaded text-decoration-none fw-semibold"><i class="bi bi-stars me-1 d-none d-sm-inline"></i> Claim all</a>
+                                                <td class="text-center py-2" colspan="3" style="cursor: pointer">
+                                                  <button type="button" class="btn btn-primary text-white">Claim all markets</button>
                                                 </td>
                                               </tr>
                                             </tbody>
@@ -174,8 +174,8 @@
                                                     <div class="d-flex justify-content-center align-items-center mb-1"><img src="../../image/assets/COMP.svg" alt="COMP" class="me-2" style="width: 1.2rem;"> <div>0</div></div>
                                                     <div class="small text-body-secondary">$0</div>
                                                 </td>
-                                                <td>
-                                                  <a href="#" class="link-secondary text-decoration-none fw-semibold"><i class="bi bi-stars me-1 d-none d-sm-inline"></i>  Claim</a>
+                                                <td class="text-end">
+                                                  <button type="button" class="btn btn-primary text-white" disabled>Claim</button>
                                                 </td>
                                               </tr>
                                               <tr>
@@ -186,8 +186,8 @@
                                                     <div class="d-flex justify-content-center align-items-center mb-1"><img src="../../image/assets/COMP.svg" alt="COMP" class="me-2" style="width: 1.2rem;"> <div>0</div></div>
                                                     <div class="small text-body-secondary">$0</div>
                                                 </td>
-                                                <td>
-                                                  <a href="#" class="link-secondary text-decoration-none fw-semibold"><i class="bi bi-stars me-1 d-none d-sm-inline"></i>  Claim</a>
+                                                <td class="text-end">
+                                                  <button type="button" class="btn btn-primary text-white" disabled>Claim</button>
                                                 </td>
                                               </tr>
                                             </tbody>
@@ -223,8 +223,8 @@
                                                     <div class="d-flex justify-content-center align-items-center mb-1"><img src="../../image/assets/COMP.svg" alt="COMP" class="me-2" style="width: 1.2rem;"> <div>234.43</div></div>
                                                     <div class="small text-body-secondary">$234.29</div>
                                                 </td>
-                                                <td>
-                                                  <a href="#" class="link-primary color-primary-shaded text-decoration-none fw-semibold"><i class="bi bi-stars me-1 d-none d-sm-inline"></i>  Claim</a>
+                                                <td class="text-end">
+                                                  <button type="button" class="btn btn-primary text-white">Claim</button>
                                                 </td>
                                               </tr>
                                             </tbody>
@@ -259,8 +259,8 @@
                                                       <div class="d-flex justify-content-center align-items-center mb-1"><img src="../../image/assets/COMP.svg" alt="COMP" class="me-2" style="width: 1.2rem;"> <div>0</div></div>
                                                       <div class="small text-body-secondary">$0</div>
                                                   </td>
-                                                  <td>
-                                                    <a href="#" class="link-secondary text-decoration-none fw-semibold"><i class="bi bi-stars me-1 d-none d-sm-inline"></i>  Claim</a>
+                                                  <td class="text-end">
+                                                    <button type="button" class="btn btn-primary text-white" disabled>Claim</button>
                                                   </td>
                                                 </tr>
                                                 <tr>
@@ -271,8 +271,8 @@
                                                       <div class="d-flex justify-content-center align-items-center mb-1"><img src="../../image/assets/COMP.svg" alt="COMP" class="me-2" style="width: 1.2rem;"> <div>0</div></div>
                                                       <div class="small text-body-secondary">$0</div>
                                                   </td>
-                                                  <td>
-                                                    <a href="#" class="link-secondary text-decoration-none fw-semibold"><i class="bi bi-stars me-1 d-none d-sm-inline"></i>  Claim</a>
+                                                  <td class="text-end">
+                                                    <button type="button" class="btn btn-primary text-white" disabled>Claim</button>
                                                   </td>
                                                 </tr>
                                               </tbody>
