--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
         <h1>Compound Proto</h1>
         <ul class="mb-5">
           <li><a href="template/template.html">General template - Not connected</a></li>
-          <li><a href="template/template.2.html">General template - Connected</a></li>
+          <li><a href="template/template.2.html">General template - Connected #1</a></li>
+          <li><a href="template/template.4.html">General template - Connected #2</a></li>
+          <li><a href="template/template.5.html">General template - Connected #3</a></li>
         </ul>
 
         <h2>Compound III</h2>
@@ -30,7 +32,8 @@
         <ul>
           <li>Farm
             <ul>
-              <li><a href="v3/farm/farm.html">Farm</a></li>
+              <li><a href="v3/farm/farm.html">Farm #1</a></li>
+              <li><a href="v3/farm/farm.2.html">Farm #2</a></li>
               <li><a href="v3/farm/supply.html">Supply</a></li>
               <li><a href="v3/farm/withdraw.html">Withdraw #1</a></li>
               <li><a href="v3/farm/withdraw.2.html">Withdraw #2</a></li>              
