--- a/v3/farm/farm.2.html
+++ b/v3/farm/farm.2.html
@@ -51,7 +51,7 @@
         </div>
     </nav>
 
-    <div class="container-fluid mt-5">
+    <div class="container-fluid px-4 mt-5">
         <div class="row">
             <div class="col-2 d-flex flex-column">
                 <button id="network-select" type="button" class="btn btn-light bg-body btn-lg border shadow w-100 rounded-5" style="margin-bottom: 2rem">
